--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.col-md-12{
+#tete{
 	height: 54px;
 	background-color: #9C0C26;
 }
@@ -9,7 +9,7 @@ nav ul li {
 	list-style-type: none;
 	display: inline;
 }
-#tete{
+#tete1{
 	background-color: #E8E5E8;
 }
 #classement{
